XIVY-13553 Update Primefaces 11 to Primefaces 13

--- a/dev-workflow-ui/webContent/includes/components/caseDetails/documents.xhtml
+++ b/dev-workflow-ui/webContent/includes/components/caseDetails/documents.xhtml
@@ -7,7 +7,7 @@
     <h:form id="documentsDownloadForm">
       <ui:repeat var="document" value="#{casesDetailsIvyDevWfBean.documents}">
         <li class="document-entry" style="list-style-type: none;">
-          <span class="p-mr-1 si si-#{document.icon}"/>
+          <span class="mr-1 si si-#{document.icon}"/>
           <h:commandLink value="#{document.name}">
             <p:fileDownload value="#{document.streamedContent}"></p:fileDownload>
           </h:commandLink>
