--- a/dev-workflow-ui/webContent/resources/components/processViewer.xhtml
+++ b/dev-workflow-ui/webContent/resources/components/processViewer.xhtml
@@ -12,7 +12,7 @@
     <f:facet name="header">
       <h:outputText value="#{cc.attrs.title}" />
       <p:link id="openViewerNewPage" styleClass="staight-text-icon" href="#{cc.attrs.link}" target="_blank">
-        <i class="si si-expand-6 p-ml-2" />
+        <i class="si si-expand-6 ml-2" />
       </p:link>
     </f:facet>
     <iframe id="viewerFrame" src="#{cc.attrs.link}" style="height: calc(100vh - 195px); width: 100%; border: 0;" />
