--- a/dev-workflow-ui/webContent/resources/components/taskLink.xhtml
+++ b/dev-workflow-ui/webContent/resources/components/taskLink.xhtml
@@ -8,10 +8,10 @@
 
 <cc:implementation>
   <ui:param name="task" value="#{tasksIvyDevWfBean.toTaskLinkModel(cc.attrs.task)}"/>
-  <h:link outcome="task" styleClass="p-d-flex p-ai-center">
+  <h:link outcome="task" styleClass="flex align-items-center">
     <f:param name="id" value="#{task.uuid}"/>
-    <i class="si si-task-list-edit p-mr-1" />
-    <h:outputText id="taskState" styleClass="si si-#{task.stateIcon} p-mr-1" />
+    <i class="si si-task-list-edit mr-1" />
+    <h:outputText id="taskState" styleClass="si si-#{task.stateIcon} mr-1" />
     <p:tooltip for="taskState" value="State: #{task.businessState} (#{task.state})" position="top"/>
     <h:outputText id="taskLink" value="#{task.name}" />
     <p:tooltip for="taskLink" value="Task: #{task.uuid}" position="top"/>
