--- a/dev-workflow-ui/webContent/resources/components/user.xhtml
+++ b/dev-workflow-ui/webContent/resources/components/user.xhtml
@@ -8,9 +8,9 @@
 
 <cc:implementation>
   <ui:param name="userModel" value="#{userComponentIvyDevWfBean.toComponentModel(cc.attrs.user)}" />
-  <h:panelGroup styleClass="p-d-flex p-ai-center">
+  <h:panelGroup styleClass="flex align-items-center">
     <h:panelGroup rendered="#{not empty userModel.name}">
-      <i class="p-mr-1 si-lg #{userModel.cssIcon}" />
+      <i class="mr-1 si-lg #{userModel.cssIcon}" />
     </h:panelGroup>
     <h:outputText id="userName" value="#{userModel.name}" />
   </h:panelGroup>
