--- a/dev-workflow-ui/webContent/view/allTasks.xhtml
+++ b/dev-workflow-ui/webContent/view/allTasks.xhtml
@@ -8,9 +8,9 @@
     <f:event type="preRenderView" listener="#{loginIvyDevWfBean.redirectIfNotLoggedIn}" />
     <h:form id="tasksForm">
       <div class="card">
-        <div class="p-d-flex p-ai-center p-mb-3">
-          <i class="p-pr-3 si si-task-list-edit card-title-icon"></i>
-          <h2 class="p-m-0">All Tasks</h2>
+        <div class="flex align-items-center mb-3">
+          <i class="pr-3 si si-task-list-edit card-title-icon"></i>
+          <h2 class="m-0">All Tasks</h2>
         </div>
         <ui:include src="/includes/components/allTasksTable.xhtml" />
       </div>
