--- a/dev-workflow-ui/webContent/view/api-browser.xhtml
+++ b/dev-workflow-ui/webContent/view/api-browser.xhtml
@@ -9,10 +9,10 @@
       <f:event type="preRenderView" listener="#{loginIvyDevWfBean.redirectIfNotAdmin}" />
 
       <div class="card">
-        <div class="p-d-flex p-ai-center p-mb-3">
-          <i class="p-pr-3 si si-network-browser card-title-icon"></i>
-          <h2 class="p-m-0">API Browser</h2>
-          <p:linkButton id="browseApiBtn" icon="si si-network-browser" styleClass="p-ml-auto rounded-button"
+        <div class="flex align-items-center mb-3">
+          <i class="pr-3 si si-network-browser card-title-icon"></i>
+          <h2 class="m-0">API Browser</h2>
+          <p:linkButton id="browseApiBtn" icon="si si-network-browser" styleClass="ml-auto rounded-button"
             target="_blank" href="/system/api-browser/index.html"/>
           <p:tooltip for="browseApiBtn" value="Open API browser in a new tab" position="top"/>
         </div>
