--- a/dev-workflow-ui/webContent/view/cases.xhtml
+++ b/dev-workflow-ui/webContent/view/cases.xhtml
@@ -8,11 +8,11 @@
     <f:event type="preRenderView" listener="#{loginIvyDevWfBean.redirectIfNotLoggedIn}" />
     <h:form id="casesForm">
       <div class="card">
-        <div class="p-d-flex p-ai-center p-mb-3">
-          <i class="p-pr-3 si si-task-list-approve card-title-icon"></i>
-          <h2 class="p-m-0">Cases</h2>
-          <h:panelGroup styleClass="p-ml-auto p-d-inline-flex p-ai-center" layout="block" rendered="#{adminIvyDevWfBean.isWorkflowAdmin()}">
-            <h:outputText value="All Cases" styleClass="p-mr-2"/>
+        <div class="flex align-items-center mb-3">
+          <i class="pr-3 si si-task-list-approve card-title-icon"></i>
+          <h2 class="m-0">Cases</h2>
+          <h:panelGroup styleClass="ml-auto inline-flex align-items-center" layout="block" rendered="#{adminIvyDevWfBean.isWorkflowAdmin()}">
+            <h:outputText value="All Cases" styleClass="mr-2"/>
             <p:toggleSwitch id="allCasesSwitch" value="#{casesIvyDevWfBean.casesDataModel.showAllCases}">
               <p:ajax update="casesForm"/>
             </p:toggleSwitch>
