--- a/dev-workflow-ui/webContent/view/end.xhtml
+++ b/dev-workflow-ui/webContent/view/end.xhtml
@@ -7,9 +7,9 @@
   <ui:composition template="../includes/template/template.xhtml">
     <ui:define name="content">
       <div class="card">
-        <div class="p-d-flex p-ai-center p-mb-3">
-          <i class="p-pr-3 si si-check-circle-1 card-title-icon"></i>
-          <h2 class="p-m-0">Task End</h2>
+        <div class="flex align-items-center mb-3">
+          <i class="pr-3 si si-check-circle-1 card-title-icon"></i>
+          <h2 class="m-0">Task End</h2>
         </div>
         <p>You have successfully finished the task.</p>
       </div>
