--- a/dev-workflow-ui/webContent/view/intermediateEventDetails.xhtml
+++ b/dev-workflow-ui/webContent/view/intermediateEventDetails.xhtml
@@ -13,17 +13,17 @@
       <ui:param name="intermediateElement" value="#{intermediateEventDetailsIvyDevWfBean.selectedIntermediateElement}"></ui:param>
 
       <div class="layout-dashboard">
-        <div class="p-grid">
-          <div class="p-col-12">
+        <div class="grid">
+          <div class="col-12">
             <div class="card">
               <div class="card-header">
-                <div class="card-title p-d-flex p-ai-center">
-                  <i class="p-pr-3 si si-common-file-text"></i>
-                  <h6 class="p-m-0">Description</h6>
+                <div class="card-title flex align-items-center">
+                  <i class="pr-3 si si-common-file-text"></i>
+                  <h6 class="m-0">Description</h6>
                 </div>
               </div>
               <p:panelGrid id="intermediateElement" columns="2" layout="flex"
-                columnClasses="p-col-12 p-md-3, p-col-12 p-md-9">
+                columnClasses="col-12 md:col-3, col-12 md:col-9">
                 <h:outputText value="Element Process ID" styleClass="details-description-label" />
                 <h:outputText value="#{intermediateElement.processElementId}" id="id" />
 
@@ -36,12 +36,12 @@
             </div>
           </div>
 
-          <div class="p-col-12">
+          <div class="col-12">
             <div class="card">
               <div class="card-header">
-                <div class="card-title p-d-flex p-ai-center">
-                  <i class="p-pr-3 si si-analytics-graph"></i>
-                  <h6 class="p-m-0">Events</h6>
+                <div class="card-title flex align-items-center">
+                  <i class="pr-3 si si-analytics-graph"></i>
+                  <h6 class="m-0">Events</h6>
                 </div>
               </div>
               <p:dataTable var="event" value="#{intermediateEventDetailsIvyDevWfBean.selectedIntermediateElement.eventModel}"
