--- a/dev-workflow-ui/webContent/view/intermediateEvents.xhtml
+++ b/dev-workflow-ui/webContent/view/intermediateEvents.xhtml
@@ -9,9 +9,9 @@
       <f:event type="preRenderView" listener="#{loginIvyDevWfBean.redirectIfNotAdmin}" />
 
       <div class="card">
-        <div class="p-d-flex p-ai-center p-mb-3">
-          <i class="p-pr-3 si si-analytics-graph card-title-icon"></i>
-          <h2 class="p-m-0">Intermediate Event Beans</h2>
+        <div class="flex align-items-center mb-3">
+          <i class="pr-3 si si-analytics-graph card-title-icon"></i>
+          <h2 class="m-0">Intermediate Event Beans</h2>
         </div>
 
         <h:form id="intermediateEventBeansForm">
