--- a/dev-workflow-ui/webContent/view/profile.xhtml
+++ b/dev-workflow-ui/webContent/view/profile.xhtml
@@ -14,9 +14,9 @@
         listener="#{loginIvyDevWfBean.redirectIfNotLoggedIn}" />
 
       <div class="card ui-fluid">
-        <div class="p-d-flex p-ai-center p-mb-3">
-          <i class="p-pr-3 si si-single-neutral-circle card-title-icon"></i>
-          <h2 class="p-m-0">Profile</h2>
+        <div class="flex align-items-center mb-3">
+          <i class="pr-3 si si-single-neutral-circle card-title-icon"></i>
+          <h2 class="m-0">Profile</h2>
         </div>
         <h:form id="profileForm">
           <p:growl id="growl" showDetail="true" />
