--- a/dev-workflow-ui/webContent/view/signals.xhtml
+++ b/dev-workflow-ui/webContent/view/signals.xhtml
@@ -9,15 +9,15 @@
       <f:event type="preRenderView" listener="#{loginIvyDevWfBean.redirectIfNotAdmin}" />
 
       <div class="layout-dashboard">
-        <div class="p-grid">
-          <div class="p-col-12 p-md-4">
+        <div class="grid">
+          <div class="col-12 md:col-4">
             <div class="card ui-fluid">
               <h:form id="signalForm">
                 <p:growl id="growl" showDetail="true" />
                 <div class="card-header">
-                  <div class="card-title p-d-flex p-ai-center">
-                    <i class="p-pr-3 si si-network-signal"></i>
-                    <h6 class="p-m-0">Send signal</h6>
+                  <div class="card-title flex align-items-center">
+                    <i class="pr-3 si si-network-signal"></i>
+                    <h6 class="m-0">Send signal</h6>
                   </div>
                 </div>
                 <ui:include src="/includes/components/signals/sendSignal.xhtml" />
@@ -25,24 +25,24 @@
             </div>
           </div>
 
-          <div class="p-col-12 p-md-8">
+          <div class="col-12 md:col-8">
             <div class="card">
               <div class="card-header">
-                <div class="card-title p-d-flex p-ai-center">
-                  <i class="p-pr-3 si si-network-signal"></i>
-                  <h6 class="p-m-0">Boundary signals</h6>
+                <div class="card-title flex align-items-center">
+                  <i class="pr-3 si si-network-signal"></i>
+                  <h6 class="m-0">Boundary signals</h6>
                 </div>
               </div>
               <ui:include src="/includes/components/signals/boundarySignals.xhtml" />
             </div>
           </div>
 
-          <div class="p-col-12">
+          <div class="col-12">
             <div class="card">
               <div class="card-header">
-                <div class="card-title p-d-flex p-ai-center">
-                  <i class="p-pr-3 si si-network-signal"></i>
-                  <h6 class="p-m-0">Fired signals</h6>
+                <div class="card-title flex align-items-center">
+                  <i class="pr-3 si si-network-signal"></i>
+                  <h6 class="m-0">Fired signals</h6>
                 </div>
               </div>
               <ui:include src="/includes/components/signals/firedSignals.xhtml" />
