--- a/dev-workflow-ui/webContent/view/starts.xhtml
+++ b/dev-workflow-ui/webContent/view/starts.xhtml
@@ -9,9 +9,9 @@
       <h:form id="startsForm" onkeypress="if (event.keyCode == 13) { return false; }">
 
         <div class="card">
-          <div class="p-d-flex p-ai-center p-mb-3">
-            <i class="p-pr-3 si si-navigation-menu card-title-icon"></i>
-            <h2 class="p-m-0">Starts</h2>
+          <div class="flex align-items-center mb-3">
+            <i class="pr-3 si si-navigation-menu card-title-icon"></i>
+            <h2 class="m-0">Starts</h2>
           </div>
           <ui:include src="/includes/components/startsPanel.xhtml" />
         </div>
