--- a/dev-workflow-ui/webContent/view/task.xhtml
+++ b/dev-workflow-ui/webContent/view/task.xhtml
@@ -17,13 +17,13 @@
       <div class="info-banner-wrapper">
         <p:staticMessage  severity="#{tasksDetailsIvyDevWfBean.getInfoBannerSeverity()}" detail="#{tasksDetailsIvyDevWfBean.getInfoBannerMessage()}" rendered="#{tasksDetailsIvyDevWfBean.showInfoBanner()}"></p:staticMessage>
       </div>
-        <div class="p-grid">
-          <div class="p-col-12">
+        <div class="grid">
+          <div class="col-12">
             <div class="card">
               <div class="card-header">
-                <div class="card-title p-d-flex p-ai-center">
-                  <i class="p-pr-3 si si-common-file-text"></i>
-                  <h6 class="p-m-0">Description</h6>
+                <div class="card-title flex align-items-center">
+                  <i class="pr-3 si si-common-file-text"></i>
+                  <h6 class="m-0">Description</h6>
                 </div>
                 <ui:include src="/includes/components/taskDetails/descriptionCardHeaderActions.xhtml" />
               </div>
@@ -31,24 +31,24 @@
             </div>
           </div>
 
-          <div class="p-col-12">
+          <div class="col-12">
             <div class="card">
               <div class="card-header">
-                <div class="card-title p-d-flex p-ai-center">
-                  <i class="p-pr-3 si si-cog"></i>
-                  <h6 class="p-m-0">Custom fields</h6>
+                <div class="card-title flex align-items-center">
+                  <i class="pr-3 si si-cog"></i>
+                  <h6 class="m-0">Custom fields</h6>
                 </div>
               </div>
               <jc:customFields id="customFields" customFields="#{tasksDetailsIvyDevWfBean.selectedTask.customFields}" />
             </div>
           </div>
 
-          <div class="p-col-12">
+          <div class="col-12">
             <div class="card">
               <div class="card-header">
-                <div class="card-title p-d-flex p-ai-center">
-                  <i class="p-pr-3 si si-synchronize-arrow-clock"></i>
-                  <h6 class="p-m-0">Workflow Events</h6>
+                <div class="card-title flex align-items-center">
+                  <i class="pr-3 si si-synchronize-arrow-clock"></i>
+                  <h6 class="m-0">Workflow Events</h6>
                 </div>
               </div>
               <jc:workflowEventsTable id="workflowEvents" workflowEvents="#{tasksDetailsIvyDevWfBean.selectedTask.workflowEvents}"/>
@@ -64,21 +64,21 @@
           <h:outputText value="Delegate the task to a specified user or group"/>
           <h:panelGroup id="delegateElements" layout="block" styleClass="ui-fluid">
             <p:selectOneRadio value="#{tasksDetailsIvyDevWfBean.showUsers}" layout="responsive"
-              columns="2" styleClass="p-mt-2">
+              columns="2" styleClass="mt-2">
               <f:selectItem itemLabel="User" itemValue="true"/>
               <f:selectItem itemLabel="Role" itemValue="false"/>
               <p:ajax update="delegateElements" event="valueChange"/>
             </p:selectOneRadio>
-            <p:selectOneMenu styleClass="p-mt-2" value="#{tasksDetailsIvyDevWfBean.delegateMember}"
+            <p:selectOneMenu styleClass="mt-2" value="#{tasksDetailsIvyDevWfBean.delegateMember}"
               rendered="#{tasksDetailsIvyDevWfBean.showUsers}" id="selectUserMenu" immediate="true">
               <f:selectItems value="#{tasksDetailsIvyDevWfBean.allUsers}" var="member" itemLabel="#{member.displayName}" itemValue="#{member.memberName}"/>
             </p:selectOneMenu>
-            <p:selectOneMenu styleClass="p-mt-2" value="#{tasksDetailsIvyDevWfBean.delegateMember}"
+            <p:selectOneMenu styleClass="mt-2" value="#{tasksDetailsIvyDevWfBean.delegateMember}"
               rendered="#{!tasksDetailsIvyDevWfBean.showUsers}" id="selectRoleMenu" immediate="true">
               <f:selectItems value="#{tasksDetailsIvyDevWfBean.allRoles}" var="member" itemLabel="#{member.displayName}" itemValue="#{member.memberName}"/>
             </p:selectOneMenu>
           </h:panelGroup>
-          <h:panelGroup layout="block" styleClass="p-mt-2 dialog-button-container">
+          <h:panelGroup layout="block" styleClass="mt-2 dialog-button-container">
             <p:commandButton id="delegateProceedButton" value="Assign task"
               actionListener="#{tasksDetailsIvyDevWfBean.delegateTask}" icon="si si-move-to-bottom"
               update="taskDetail" onsuccess="PF('delegateTaskModal').hide();"/>
