--- a/dev-workflow-ui/webContent/includes/components/allTasksTable.xhtml
+++ b/dev-workflow-ui/webContent/includes/components/allTasksTable.xhtml
@@ -2,7 +2,7 @@
   xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
   xmlns:c="http://xmlns.jcp.org/jsp/jstl/core" xmlns:ic="http://ivyteam.ch/jsf/component"
   xmlns:p="http://primefaces.org/ui" xmlns:pe="http://primefaces.org/ui/extensions"
-  xmlns:jc="http://java.sun.com/jsf/composite/components">
+  xmlns:jc="http://xmlns.jcp.org/jsf/composite/components">
 
   <p:dataTable id="tasks" var="task" value="#{tasksIvyDevWfBean.tasksDataModel}" widgetVar="tasksTable" styleClass="ui-fluid"
     emptyMessage="No Tasks found with given criteria" lazy="true" paginatorPosition="bottom" rows="10" paginator="true" paginatorAlwaysVisible="false"
