--- a/dev-workflow-ui/webContent/includes/components/signals/boundarySignals.xhtml
+++ b/dev-workflow-ui/webContent/includes/components/signals/boundarySignals.xhtml
@@ -2,7 +2,7 @@
   xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
   xmlns:c="http://xmlns.jcp.org/jsp/jstl/core" xmlns:ic="http://ivyteam.ch/jsf/component"
   xmlns:p="http://primefaces.org/ui" xmlns:pe="http://primefaces.org/ui/extensions"
-  xmlns:jc="http://java.sun.com/jsf/composite/components">
+  xmlns:jc="http://xmlns.jcp.org/jsf/composite/components">
 
   <p:dataTable id="boundarySignalsTable" var="receiver" value="#{signalsIvyDevWfBean.boundarySignalModel}" lazy="true"
     rows="5" paginator="true" paginatorPosition="bottom" paginatorAlwaysVisible="false">
