--- a/dev-workflow-ui/webContent/includes/components/userTable.xhtml
+++ b/dev-workflow-ui/webContent/includes/components/userTable.xhtml
@@ -16,7 +16,7 @@
         <f:facet name="header">
           <div class="ui-input-icon-left filter-container">
             <i class="pi pi-search"/>
-            <p:inputText id="globalFilter" onkeyup="PF('usersTable').filter()" placeholder="Search" />
+            <p:inputText id="globalFilter" value="#{loginTableIvyDevWfBean.globalFilter}"  onkeyup="PF('usersTable').filter()" placeholder="Search" />
           </div>
         </f:facet>
 
