Add ajax exception handler

--- a/dev-workflow-ui/webContent/includes/template/template.xhtml
+++ b/dev-workflow-ui/webContent/includes/template/template.xhtml
@@ -107,6 +107,7 @@
   </div>
 
   <ui:include src="progress-loader.xhtml" />
+  <ui:include src="exception.xhtml" />
 
   <h:outputStylesheet name="css/layout-ivy-#{ivyFreyaTheme.mode}.css" library="freya-layout" />
   <h:outputStylesheet name="primeflex-3.min.css" library="primeflex" />
